# vansour-substore

./: .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  Makefile  README.md  compose.yml  package-lock.json  package.json  playwright.config.js
.github/scripts/: cargo_json_to_rdjsonl.py
.github/workflows/: ci.yml  preview.yml  release.yml  reviewdog.yml
assets/: app.css
backend/: Cargo.toml
backend/migrations/: 0001_initial.sql  0002_user_cache_snapshots.sql  0003_config_versions.sql
backend/src/: app.rs  cache.rs  config.rs  db.rs  diagnostics.rs  error.rs  lib.rs  main.rs  security.rs  session.rs  state.rs  subscriptions.rs
backend/src/routes/: auth.rs  mod.rs  public.rs  users.rs
backend/tests/: http_flow.rs
docs/rewrite/: stage-1-baseline.md  stage-1-compatibility-matrix.md  stage-10-ssrf-and-trust-boundary.md  stage-11-edge-hardening.md  stage-2-scaffold.md  stage-3-implementation.md  stage-4-delivery.md  stage-5-cutover.md  stage-6-persistent-sessions.md  stage-7-security-and-observability.md  stage-8-persistent-merge-cache.md  stage-9-cache-consistency.md
e2e/: unsafe-links.spec.js  user-order.spec.js
e2e/fixtures/: upstream-server.js
frontend/: Cargo.toml
frontend/src/: api.rs  app.rs  main.rs
frontend/src/components/: mod.rs  shell.rs
frontend/src/components/console/: auth.rs  cache.rs  diagnostics.rs  editor.rs  mod.rs  services.rs  state.rs  users.rs
src/: config.rs  error.rs  log.rs  main.rs  state.rs  utils.rs
src/handlers/: auth.rs  mod.rs  subscription.rs  user.rs
