[workspace]
members = [
    "backend",
    "frontend",
    "packages/shared",
    "packages/core",
]
default-members = [
    "backend",
    "frontend",
    "packages/shared",
    "packages/core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
axum = { version = "=0.8.8" }
dioxus = { version = "=0.7.3", features = ["router"] }
futures = "0.3"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "gzip", "brotli", "deflate", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "json", "migrate"] }
tokio = { version = "1.50", features = ["macros", "rt-multi-thread", "signal", "net", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tower-sessions = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"
